--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Christina Karakosta</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,10 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/christina.jpg" alt="" /></a>
+					<h1><strong>Christina Karakosta</strong></h1>
+					<h1>Ph.D. Candidate, Imperial College London</h1>
 				</div>
 			</header>
 
@@ -29,59 +28,62 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am a Ph.D. Candidate in Computing Department at Imperial College London. My research interest lies in the field of Data Science and Privacy Engineering.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="files/CV.pdf" class="button">View CV</a></li>
 						</ul>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Research Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Reputation, Trust, and Privacy in the Sharing Economy: A Network Science Approach.</h3>
+								<h3><a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics"> Financial Computing & Analytics</a> Group, UCL</h3>
+								<p>Sentiment Analysis and Regression Analysis of multivariate social media data on Sharing Economy by using statistical software programming tools (Python & R).</p>
+								<p>Supervisor: <a href="https://sites.google.com/site/giacomolivan"> Dr Giacomo Livan</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3><a href="https://nemertes.library.upatras.gr/jspui//handle/10889/11987">[Master Thesis] Trust Issues in Sharing Economy: A study based on Sentiment Analysis in Social Networks</a></h3>
+								<p>September 2018, University of Patras, Greece</p>
+								<p>Supervisor: <a href="https://blogs.upatras.gr/tzagara/"> Prof Manolis Tzagarakis</a></p>
+								<p>Co-advisor: <a href="https://blogs.upatras.gr/daskalou/"> Dr Victoria Daskalou</a></p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
-
+				
 				<!-- Three -->
-					<section id="three">
+				<section id="three">
+					<h2>Graduate Teaching Assistant</h2>
+					<div class="row">
+						<article class="col-6 col-12-xsmall work-item">
+							<h3><a href="https://www.imperial.ac.uk/computing/current-students/courses/70050/">COMP70050: Introduction to Machine Learning</a></h3>
+							<p>Autumn term - Academic Year 2020-21</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<h3><a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/">COMP70016: Natural Language Processing</a></h3>
+							<p>Spring term - Academic Year 2020-21</p>
+						</article>
+						<!-- <article class="col-6 col-12-xsmall work-item">
+							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/" class="image fit thumb"><img src="images/thumbs/NLP2.jpg" alt="" /></a>
+							<h3>COMP70016: Natural Language Processing </h3>
+							<p>Spring term - Academic Year 2020-21</p>
+						</article>
+					 -->
+					</div>
+					<!-- <ul class="actions">
+						<li><a href="#" class="button">Full Portfolio</a></li>
+					</ul> 
+					-->
+				</section>
+			
+				<!-- Five -->
+					<section id="five">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Please feel free to contact me.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -98,18 +100,8 @@
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="mailto:">c.karakosta20@imperial.ac.uk</a>
 									</li>
 								</ul>
 							</div>
@@ -440,13 +432,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:c.karakosta20@imperial.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/christina-karakosta" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/ckarakosta" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://twitter.com/c_karakosta" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Christina Karakosta</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
