--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				</div>
 			</header>
 
+			
 		<!-- Main -->
 			<div id="main">
 
@@ -32,21 +33,23 @@
 						</header>
 						<p>I am a Ph.D. Candidate in Computing Department at Imperial College London. My research interest lies in the field of Data Science and Privacy Engineering.</p>
 						<ul class="actions">
-							<li><a href="files/CV.pdf" class="button">View CV</a></li>
+							<li><a href="files/CV.pdf" target="_blank" class="button">View CV</a></li>
 						</ul>
 					</section>
 
 				<!-- Two -->
-					<section id="two">
+					<section id="three">
 						<h2>Research Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics" target="_blank" class="image fit thumb"><img src="images/thumbs/SE2.jpg" alt="" /></a>
 								<h3>Reputation, Trust, and Privacy in the Sharing Economy: A Network Science Approach.</h3>
 								<h3><a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics"> Financial Computing & Analytics</a> Group, UCL</h3>
 								<p>Sentiment Analysis and Regression Analysis of multivariate social media data on Sharing Economy by using statistical software programming tools (Python & R).</p>
 								<p>Supervisor: <a href="https://sites.google.com/site/giacomolivan"> Dr Giacomo Livan</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://nemertes.library.upatras.gr/jspui//handle/10889/11987" target="_blank" class="image fit thumb"><img src="images/thumbs/SE1.png" alt="" /></a>
 								<h3><a href="https://nemertes.library.upatras.gr/jspui//handle/10889/11987">[Master Thesis] Trust Issues in Sharing Economy: A study based on Sentiment Analysis in Social Networks</a></h3>
 								<p>September 2018, University of Patras, Greece</p>
 								<p>Supervisor: <a href="https://blogs.upatras.gr/tzagara/"> Prof Manolis Tzagarakis</a></p>
@@ -60,10 +63,12 @@
 					<h2>Graduate Teaching Assistant</h2>
 					<div class="row">
 						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70050/" target="_blank" class="image fit thumb"><img src="images/thumbs/ML.png" alt="" /></a>
 							<h3><a href="https://www.imperial.ac.uk/computing/current-students/courses/70050/">COMP70050: Introduction to Machine Learning</a></h3>
 							<p>Autumn term - Academic Year 2020-21</p>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/" target="_blank" class="image fit thumb"><img src="images/thumbs/NLP2.jpg" alt="" /></a>
 							<h3><a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/">COMP70016: Natural Language Processing</a></h3>
 							<p>Spring term - Academic Year 2020-21</p>
 						</article>
@@ -433,9 +438,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="mailto:c.karakosta20@imperial.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://www.linkedin.com/in/christina-karakosta" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/ckarakosta" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://twitter.com/c_karakosta" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/christina-karakosta" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/ckarakosta" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://twitter.com/c_karakosta" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						
 					</ul>
 					<ul class="copyright">
