--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
 					<h1><strong>Christina Karakosta</strong></h1>
 					<h1>Ph.D. Candidate, Imperial College London</h1>
 				</div>
-				<div class="col-6 col-12-small">
+
+				<div class="col-4 col-12-xsmall">
 					<input
 					type="checkbox"
 					id="dark-theme"
 					name="dark-theme"
 					onclick="darkTheme()">
 					<div class=""></div>
-					<label for="dark-theme"><div class="fas fa-moon moonboi fa-2x"></div> Dark Mode</label>
+					<ul class="actions">
+					<label for="dark-theme">
+						<ul class="actions">
+							<div class="button small icon solid fa-moon moonboi fa-2x"> Dark Mode </div>
+						</ul>
+					</label>
 				</div>
 			</header>
 
@@ -60,16 +66,16 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics" target="_blank" class="image fit thumb"><img src="images/thumbs/SE2.jpg" alt="" /></a>
 								<h3>Reputation, Trust, and Privacy in the Sharing Economy: A Network Science Approach.</h3>
-								<h3><a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics"> Financial Computing & Analytics</a> Group, UCL</h3>
+								<h3><a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics" target="_blank"> Financial Computing & Analytics</a> Group, UCL</h3>
 								<p>Sentiment Analysis and Regression Analysis of multivariate social media data on Sharing Economy by using statistical software programming tools (Python & R).</p>
-								<p>Supervisor: <a href="https://sites.google.com/site/giacomolivan"> Dr Giacomo Livan</a></p>
+								<p>Supervisor: <a href="https://sites.google.com/site/giacomolivan" target="_blank"> Dr Giacomo Livan</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://nemertes.library.upatras.gr/jspui//handle/10889/11987" target="_blank" class="image fit thumb"><img src="images/thumbs/SE1.png" alt="" /></a>
 								<h3><a href="https://nemertes.library.upatras.gr/jspui//handle/10889/11987">[Master Thesis] Trust Issues in Sharing Economy: A study based on Sentiment Analysis in Social Networks</a></h3>
 								<p>September 2018, University of Patras, Greece</p>
-								<p>Supervisor: <a href="https://blogs.upatras.gr/tzagara/"> Prof Manolis Tzagarakis</a></p>
-								<p>Co-advisor: <a href="https://blogs.upatras.gr/daskalou/"> Dr Victoria Daskalou</a></p>
+								<p>Supervisor: <a href="https://blogs.upatras.gr/tzagara/" target="_blank"> Prof Manolis Tzagarakis</a></p>
+								<p>Co-advisor: <a href="https://blogs.upatras.gr/daskalou/" target="_blank"> Dr Victoria Daskalou</a></p>
 							</article>
 						</div>
 					</section>
