--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/christina.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/christin.jpg" alt="" /></a>
 					<h1><strong>Christina Karakosta</strong></h1>
-					<h1>Ph.D. Candidate, Imperial College London</h1>
+					<h1>PhD Candidate, Imperial College <br> London</h1>
 				</div>
 
 				<div class="col-4 col-12-xsmall">
@@ -53,29 +53,77 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>I am a Ph.D. Candidate in Computing Department at Imperial College London. My research interest lies in the field of Data Science and Privacy Engineering.</p>
+						<p>I am a PhD student in the <a href="https://www.imperial.ac.uk/computing" target="_blank"> Department of Computing</a> at Imperial College London, 
+							under the supervision of <a href="https://www.doc.ic.ac.uk/~wjk/" target="_blank"> Prof William J. Knottenbelt</a>. 
+							My main research interests lie in the fields of Privacy Engineering, Information Security and Distributed Ledger Technology.</p>
 						<ul class="actions">
 							<li><a href="files/CV.pdf" target="_blank" class="button">View CV</a></li>
 						</ul>
 					</section>
 
 				<!-- Two -->
+				<section id="three">
+					<h2>News</h2>
+					<div class="row">
+						<table>
+							<tr>
+								<td>01 July 2022</td>
+								<td>Poster presentation on "Privacy-Preserving Information Sharing in P2P Environments" at the <a href="https://sites.google.com/view/icl-icc/home" target="_blank"> Imperial Computing Conference (ICC)</a> in London, UK</td>
+							  </tr>
+							<tr>
+								<td>23-26 May 2022</td>
+								<td>Attended the <a href="https://www.ieee-security.org/TC/SP2022/" target="_blank"> 43rd IEEE Symposium on Security and Privacy </a>
+								in San Francisco, CA</td>
+							  </tr>
+							<tr>
+							  <td>18 May <br> 2022</td>
+							  <td>Received the <strong>IEEE S&P Student Travel Grant</strong> to attend the <a href="https://www.ieee-security.org/TC/SP2022/" target="_blank"> 43rd IEEE Symposium on Security and Privacy </a> 
+								held at the Hyatt Regency in San Fransisco, CA</td>
+							</tr>
+							<tr>
+								<td>27-30 Sept 2021</td>
+								<td>Attended the <a href="https://brains.dnac.org/2021/" target="_blank">  
+									3rd Conference on Blockchain Research & Applications for Innovative Networks and Services</a> (BRAINS 2021), (Virtual Conference)</td>
+							 </tr>
+							<tr>
+								<td>12-16 July 2021</td>
+								<td>Attended the <a href="https://petsymposium.org/cfp21.php" target="_blank"> 21st Privacy Enhancing Technologies Symposium</a> (PETS 2021), (Virtual Attendance)</td>
+							 </tr>
+							<tr>
+								<td>06-12 Dec 2020</td>
+								<td>Attended the <a href="https://weis2020.econinfosec.org/" target="_blank"> 20th Annual Workshop on the Economics of Information Security</a> (WEIS 2020), 
+									Brussels (Virtual Conference)</td>
+							 </tr>
+							<tr>
+								<td>06-12 Dec 2020</td>
+								<td>Attended the <a href="https://www.ieee-security.org/TC/SP2022/" target="_blank"> Thirty-fourth Conference on Neural Information Processing Systems</a> (NeurIPS 2020), United States (Virtual-only)</td>
+							  </tr>
+						  </table>
+					</div>
+				</section>
+					
+				<!-- Two -->
 					<section id="three">
 						<h2>Research Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="files/LSRposter.pdf" target="_blank" class="image fit thumb"><img src="images/thumbs/LSRposter.png" alt="" /></a>
+								<h3>[Poster] <a href="files/LSRposter.pdf" target="_blank"> Privacy-Preserving Information Sharing in P2P Environments</a></h3>
+								<p><a href="https://sites.google.com/view/icl-icc/home" target="_blank"> Imperial Computing Conference (ICC)</a>, Imperial College London</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3></h3>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics" target="_blank" class="image fit thumb"><img src="images/thumbs/SE2.jpg" alt="" /></a>
-								<h3>Reputation, Trust, and Privacy in the Sharing Economy: A Network Science Approach.</h3>
+								<h3>Reputation, Trust, and Privacy in the Sharing Economy: A Network Science Approach</h3>
 								<h3><a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics" target="_blank"> Financial Computing & Analytics</a> Group, UCL</h3>
-								<p>Sentiment Analysis and Regression Analysis of multivariate social media data on Sharing Economy by using statistical software programming tools (Python & R).</p>
-								<p>Supervisor: <a href="https://sites.google.com/site/giacomolivan" target="_blank"> Dr Giacomo Livan</a></p>
+								<p>Sentiment Analysis and Regression Analysis of multivariate social media data on Sharing Economy.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://nemertes.library.upatras.gr/jspui//handle/10889/11987" target="_blank" class="image fit thumb"><img src="images/thumbs/SE1.png" alt="" /></a>
 								<h3><a href="https://nemertes.library.upatras.gr/jspui//handle/10889/11987">[Master Thesis] Trust Issues in Sharing Economy: A study based on Sentiment Analysis in Social Networks</a></h3>
 								<p>September 2018, University of Patras, Greece</p>
-								<p>Supervisor: <a href="https://blogs.upatras.gr/tzagara/" target="_blank"> Prof Manolis Tzagarakis</a></p>
-								<p>Co-advisor: <a href="https://blogs.upatras.gr/daskalou/" target="_blank"> Dr Victoria Daskalou</a></p>
 							</article>
 						</div>
 					</section>
@@ -85,9 +133,14 @@
 					<h2>Graduate Teaching Assistant</h2>
 					<div class="row">
 						<article class="col-6 col-12-xsmall work-item">
-							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70050/" target="_blank" class="image fit thumb"><img src="images/thumbs/ML.png" alt="" /></a>
+							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70009/" target="_blank" class="image fit thumb"><img src="images/thumbs/Cryptograohy_engineering.jpg" alt="" /></a>
+							<h3><a href="https://www.imperial.ac.uk/computing/current-students/courses/70009/">COMP70009: Cryptography Engineering</a></h3>
+							<p>Spring term - Academic Year 2021-22</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70050/" target="_blank" class="image fit thumb"><img src="images/thumbs/ML2.png" alt="" /></a>
 							<h3><a href="https://www.imperial.ac.uk/computing/current-students/courses/70050/">COMP70050: Introduction to Machine Learning</a></h3>
-							<p>Autumn term - Academic Year 2020-21</p>
+							<p>Autumn term - Academic Year 2020-21, 2021-22</p>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
 							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/" target="_blank" class="image fit thumb"><img src="images/thumbs/NLP2.jpg" alt="" /></a>
@@ -466,7 +519,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Christina Karakosta</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2022 Christina Karakosta</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
