--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 				<section id="three">
 					<h2>News</h2>
 					<div class="row">
+						<h6>
 						<table>
 							<tr>
-								<td>01 July 2022</td>
+								<td>01 July <br> 2022</td>
 								<td>Poster presentation on "Privacy-Preserving Information Sharing in P2P Environments" at the <a href="https://sites.google.com/view/icl-icc/home" target="_blank"> Imperial Computing Conference (ICC)</a> in London, UK</td>
 							  </tr>
 							<tr>
@@ -98,7 +99,8 @@
 								<td>06-12 Dec 2020</td>
 								<td>Attended the <a href="https://www.ieee-security.org/TC/SP2022/" target="_blank"> Thirty-fourth Conference on Neural Information Processing Systems</a> (NeurIPS 2020), United States (Virtual-only)</td>
 							  </tr>
-						  </table>
+						</table>
+						</h6>
 					</div>
 				</section>
 					
