--- a/index.html
+++ b/index.html
@@ -108,8 +108,17 @@
 					<section id="three">
 						<h2>Research Projects</h2>
 						<div class="row">
-							
-							
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="files/LSRposter.pdf" target="_blank" class="image fit thumb"><img src="images/thumbs/PosterPresentation.jpg" alt="" /></a>
+								<h3><a href="files/LSRposter.pdf" target="_blank"> Privacy-Preserving Information Sharing in P2P Environments</a></h3>
+								<p><a href="https://sites.google.com/view/icl-icc/home" target="_blank"> Imperial Computing Conference (ICC)</a>, Imperial College London</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href=" " target="_blank" class="image fit thumb"><img src=" " alt="" /></a>
+								<h3>  </h3>
+								<h3>  </h3>
+								<p>  </p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.ucl.ac.uk/computer-science/research/research-groups/financial-computing-and-analytics" target="_blank" class="image fit thumb"><img src="images/thumbs/SE2.jpg" alt="" /></a>
 								<h3>Reputation, Trust, and Privacy in the Sharing Economy: A Network Science Approach</h3>
