--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 						<h6>
 						<table>
 							<tr>
+								<td>12-14 July 2022</td>
+								<td>Attended the <a href="https://www.marble-conference.org/marble2022" target="_blank"> 3rd International Conference on 
+									Mathematical Research for Blockchain Economy (MARBLE 2022)</a> in Vilamoura, Portugal</td>
+							</tr>
+							<tr>
 								<td>01 July <br> 2022</td>
 								<td>Poster presentation on "Privacy-Preserving Information Sharing in P2P Environments" at the <a href="https://sites.google.com/view/icl-icc/home" target="_blank"> Imperial Computing Conference (ICC)</a> in London, UK</td>
 							  </tr>
