--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/christin.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/christina.jpg" alt="" /></a>
 					<h1><strong>Christina Karakosta</strong></h1>
 					<h1>PhD Candidate, Imperial College <br> London</h1>
 				</div>
