--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>I am a PhD student in the <a href="https://www.imperial.ac.uk/computing" target="_blank"> Department of Computing</a> at Imperial College London, 
+						<p>I am a PhD candidate in the <a href="https://www.imperial.ac.uk/computing" target="_blank"> Department of Computing</a> at Imperial College London, 
 							under the supervision of <a href="https://www.doc.ic.ac.uk/~wjk/" target="_blank"> Prof William J. Knottenbelt</a>. 
 							My main research interests lie in the fields of Privacy Engineering, Information Security and Distributed Ledger Technology.</p>
 						<ul class="actions">
@@ -67,6 +67,30 @@
 					<div class="row">
 						<h6>
 						<table>
+							<tr>
+								<td>09-11 July 2024</td>
+								<td>Attended the <a href="https://www.marble-conference.org/marble2024" target="_blank"> 5th International Conference on Mathematical Research for Blockchain Economy (MARBLE 2024)</a> in Malaga, Spain</td>
+							</tr>
+							<tr>
+								<td>10-15 July 2023</td>
+								<td>Attended the <a href="https://petsymposium.org/2023/" target="_blank"> 23rd Privacy Enhancing Technologies Symposium (PETS 2023)</a> in Lausanne, Switzerland</td>
+							</tr>
+							<tr>
+								<td>6 July <br> 2023</td>
+								<td>Received the <strong>2023 PETS Scholar</strong> to attend the <a href="https://petsymposium.org/2023/" target="_blank"> 23rd Privacy Enhancing Technologies Symposium (PETS 2023) </a> </td>
+							</tr>
+							<tr>
+								<td>15-19 April 2023</td>
+								<td>Attended the <a href="https://2023.ipfs-thing.io/" target="_blank"> InterPlanetary File System Thing (IPFS-Thing 2023)</a> in Brussels, Belgium</td>
+							</tr>
+							<tr>
+								<td>27 March <br> 2023</td>
+								<td>Received the <strong>2023 IPFS Thing Scholar</strong> to attend the <a href="https://2023.ipfs-thing.io/" target="_blank"> InterPlanetary File System Thing (IPFS-Thing 2023) </a> </td>
+							</tr>
+							<tr>
+								<td>15th March 2023</td>
+								<td> Presentation and talk at the Female PhD Research Panel at <a href="http://wic.doc.ic.ac.uk/" target="_blank"> Breaking the code: Women in Computing Imperial x Kings</a> in London, UK</td>
+							</tr>
 							<tr>
 								<td>12-14 July 2022</td>
 								<td>Attended the <a href="https://www.marble-conference.org/marble2022" target="_blank"> 3rd International Conference on 
@@ -103,7 +127,11 @@
 							<tr>
 								<td>06-12 Dec 2020</td>
 								<td>Attended the <a href="https://www.ieee-security.org/TC/SP2022/" target="_blank"> Thirty-fourth Conference on Neural Information Processing Systems</a> (NeurIPS 2020), United States (Virtual-only)</td>
-							  </tr>
+							</tr>
+							<tr>
+								<td>Oct 2020</td>
+								<td>Excited to share that I am a <a href="https://www.splunk.com/en_us/blog/splunklife/splunk-supports-phd-talent-in-imperial-s-department-of-computing.html" target="_blank"> Splunk PhD Scholar!</a> </td>
+							</tr>
 						</table>
 						</h6>
 					</div>
@@ -156,6 +184,11 @@
 							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/" target="_blank" class="image fit thumb"><img src="images/thumbs/NLP2.jpg" alt="" /></a>
 							<h3><a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/">COMP70016: Natural Language Processing</a></h3>
 							<p>Spring term - Academic Year 2020-21</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://www.imperial.ac.uk/business-school/masters/climate-change-management-finance/#programme-content" target="_blank" class="image fit thumb"><img src="images/thumbs/Finance.jpg" alt="" /></a>
+							<h3><a href="https://www.imperial.ac.uk/business-school/masters/climate-change-management-finance/#programme-content">Principles of Finance</a></h3>
+							<p>@ Imperial College Business School <br> Autumn term - Academic Year 2022-23</p>
 						</article>
 						<!-- <article class="col-6 col-12-xsmall work-item">
 							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/" class="image fit thumb"><img src="images/thumbs/NLP2.jpg" alt="" /></a>
