--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
 							<a href="https://www.imperial.ac.uk/business-school/masters/climate-change-management-finance/#programme-content" target="_blank" class="image fit thumb"><img src="images/thumbs/Finance.jpg" alt="" /></a>
-							<h3><a href="https://www.imperial.ac.uk/business-school/masters/climate-change-management-finance/#programme-content">Principles of Finance</a></h3>
-							<p>@ Imperial College Business School <br> Autumn term - Academic Year 2022-23</p>
+							<h3><a href="https://www.imperial.ac.uk/business-school/masters/climate-change-management-finance/#programme-content">Principles of Finance</a> @ Imperial College Business School</h3>
+							<p>Autumn term - Academic Year 2022-23</p>
 						</article>
 						<!-- <article class="col-6 col-12-xsmall work-item">
 							<a href="https://www.imperial.ac.uk/computing/current-students/courses/70016/" class="image fit thumb"><img src="images/thumbs/NLP2.jpg" alt="" /></a>
